--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
+    "styled-components": "^6.1.13",
     "swr": "^2.2.5"
   },
   "devDependencies": {
